projects/elements/src/button/button.css
:host {
  --nve-sys-interaction-state-base: var(--background);
  --background: var(--nve-sys-interaction-background);
  --color: var(--nve-sys-interaction-color);
  --padding: 0 var(--nve-ref-size-300);
  --border-radius: var(--nve-ref-border-radius-lg);
  --font-weight: var(--nve-ref-font-weight-semibold);
  --font-size: var(--nve-ref-font-size-200);
  --text-decoration: none;
  --text-align: center;
  --cursor: pointer;
  --gap: var(--nve-ref-space-xs);
  --height: var(--nve-ref-size-800);
  --_icon-color: var(--color);
  --width: initial;
  display: inline-flex;
  position: relative;
  user-select: none;
  white-space: nowrap;
  width: var(--width);
}

[internal-host] {
  color: var(--color);
  background: var(--background);
  padding: var(--padding);
  height: var(--height);
  width: 100%;
  border-radius: var(--border-radius);
  text-decoration: var(--text-decoration);
  text-align: var(--text-align);
  font-weight: var(--font-weight);
  font-size: var(--font-size);
  cursor: var(--cursor);
  gap: var(--gap);
  display: inline-flex;
  place-items: center;
  justify-content: center;
  white-space: nowrap;
  line-height: 1.2em;
  overflow: hidden;
}

::slotted(nve-icon) {
  --color: var(--_icon-color);
  pointer-events: none;
}

::slotted(a) {
  text-decoration: var(--text-decoration) !important;
  color: var(--color) !important;
  gap: var(--gap) !important;
  display: flex !important;
  align-items: center !important;
  outline: 0;
}

::slotted(a)::after {
  display: block;
  content: ' ';
  inset: 0;
  position: absolute;
}

:host([nve-control]) {
  --text-align: start;
  --border-radius: var(--nve-ref-border-radius-sm);
  --font-weight: var(--nve-ref-font-weight-regular);
  --padding: 0 var(--nve-ref-size-200);
  --height: var(--nve-ref-size-700);

  & [internal-host] {
    justify-content: start;
  }

  & ::slotted(nve-icon[name='chevron-down']) {
    --color: var(--nve-sys-text-muted-color);
    --width: var(--nve-ref-size-300);
    --height: var(--nve-ref-size-300);
    margin-inline: auto 0;
  }

  &:host(:hover) [interaction-state] {
    --nve-sys-interaction-state-ratio: 0;
  }
}

:host([size='sm']) {
  --height: var(--nve-ref-size-700);
  --padding: 0 var(--nve-ref-size-200);
}

:host([size='lg']) {
  --height: var(--nve-ref-size-900);
  --padding: 0 var(--nve-ref-size-600);
}

:host([readonly]) {
  --text-decoration: none !important;
  --cursor: cursor !important;
}

:host([interaction='emphasize']) {
  --color: var(--nve-sys-interaction-emphasize-color);
  --background: var(--nve-sys-interaction-emphasize-background);
  --nve-sys-interaction-state-mix: var(--nve-ref-color-black);
}

:host([interaction='destructive']) {
  --color: var(--nve-sys-interaction-destructive-color);
  --background: var(--nve-sys-interaction-destructive-background);
  --nve-sys-interaction-state-mix: var(--nve-ref-color-black);
}

:host([interaction='inverse']) {
  --color: var(--nve-sys-interaction-background);
  --background: var(--nve-sys-interaction-color);
}

:host(:--disabled) {
  --color: var(--nve-sys-interaction-disabled-color);
  --background: var(--nve-sys-interaction-disabled-background);
  --cursor: not-allowed;
}

:host([interaction*='ghost']) {
  --background: transparent;
  --padding: 0 var(--nve-ref-size-200);
  --_icon-color: var(--color);

  &:host(:hover) {
    --background: transparent;
    --text-decoration: underline;

    [interaction-state] {
      --nve-sys-interaction-state-ratio: 0;
    }
  }

  &:host(:--active) {
    --background: transparent;
    --text-decoration: underline;
  }

  &:host(:--disabled) {
    --color: var(--nve-sys-interaction-disabled-color);
    --background: transparent;
    --text-decoration: none;
  }

  &:host([interaction*='destructive']) {
    --color: var(--nve-sys-interaction-destructive-background);
  }

  &:host([interaction*='emphasize']) {
    --color: var(--nve-sys-interaction-emphasize-background);
  }
}

